# Siteseeing

./: Project Structure  README.md  main.py  pyproject.toml  requirements.txt
tests/: test_config.py  test_queue.py
webshot/: __init__.py  app.py  browser.py  config.py  gui.py  queue_manager.py  utils.py
